--- a/index.html
+++ b/index.html
@@ -2393,7 +2393,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="widget-title">Sign in</h3>
       <a href="https://kimaye.com/pages/why-kimaye#" class="widget-close">close</a>
    </div>
-   <div class="login-form">
+/*   <div class="login-form">
       <div class="shopify-message resetSuccessside" style="display:none;">We've sent you an email with a link to update your password.</div>
       <p class="text_content_success resetSuccessside" style="display:none;">A password reset email has been sent to the email address on file for your account, but may take several minutes to show up in your inbox. Please wait at least 10 minutes before attempting another reset.</p>
       <ul id="gl_shopify_errorside" class="shopify-error" style="display:none;">
@@ -2439,12 +2439,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                <button type="button" onclick="hideRecoverPasswordFormSide();return false;" class="shopify-Button button">Cancel</button>
             </p></form></div>
    </div>
-   <div class="register-question">
+*/   /*<div class="register-question">
       <span class="create-account-text">No account yet?</span>
       <p>Welcome to Kimaye! Help us with a few details to know you better as you take the journey of enjoying our safe and tasty fruits.</p>
       <a class="btn btn-style-link" href="https://kimaye.com/account/register" id="hideFormLogin" onclick="hideFormLogin();return false;">Create an Account</a>
       <a class="btn btn-style-link" href="https://kimaye.com/account/login" id="showFormLogin" onclick="showFormLogin();return false;" style="display:none">Login</a>
-   </div>
+   </div>*/
 </div>
 <script type="text/javascript">
   /*
@@ -2501,10 +2501,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!--       </select> -->
 <!--     </fieldset> -->
 <!--   </form> --><ul id="menu-mobile-nav" class="site-mobile-menu"><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/">Home</a></li><li class="menu-item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children menu-item-design-default item-event-hover">
-               <a href="https://kimaye.com/pages/why-kimaye#">Learn</a>
+               <a href="#">Learn</a>
                <div class="sub-menu-dropdown color-scheme-dark">
                   <div class="container">
-                     <ul class="sub-menu color-scheme-dark"><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/pages/our-story">Our story</a></li><li class="menu-item menu-item-design-default item-event-hover current_page_item"><a href="https://kimaye.com/pages/why-kimaye">Why kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/pages/traceability">Traceability</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/pages/beyond-fruits">Beyond fruits</a></li></ul>
+                     <ul class="sub-menu color-scheme-dark"><li class="menu-item menu-item-design-default item-event-hover"><a href="/our-story.html">Our story</a></li><li class="menu-item menu-item-design-default item-event-hover current_page_item"><a href="https://kimaye.com/pages/why-kimaye">Why kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/pages/traceability">Traceability</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/pages/beyond-fruits">Beyond fruits</a></li></ul>
                   </div>
                </div>
             <span class="icon-sub-menu"></span></li><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/blogs/grow-with-kimaye">Grow with kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="https://kimaye.com/pages/contact-us">Contact us</a></li></ul></div><div class="header-links">
@@ -2672,9 +2672,9 @@ $('.minus').click(function() {
 
 <div class="container">
    <div class="wrapp-header mobile_nav_center"><div class="right-column one"><div class="mobile-nav-icon"><span class="basel-burger"></span></div></div><div class="main-nav site-navigation basel-navigation menu-left" role="navigation"><div id="shopify-section-gl_mega_menu" class="shopify-section menu-section menu-main-navigation-container"><ul id="menu-main-navigation" class="menu"><li id="menu-item-1600233103126" class="yash block_type_dropdown menu-item menu-item-learn menu-item-1600233103126 menu-item-design-default item-event-hover menu-item-has-children">
-         <a href="https://kimaye.com/pages/why-kimaye" target="_self">Learn</a><div class="sub-menu-dropdown color-scheme-dark">
+         <a href="#" target="_self">Learn</a><div class="sub-menu-dropdown color-scheme-dark">
               <div class="container">
-                 <ul class="sub-menu color-scheme-dark"><li><a href="https://kimaye.com/pages/our-story">OUR STORY</a></li><li><a href="https://kimaye.com/pages/why-kimaye" class="current-menu-item">WHY KIMAYE</a></li><li><a href="https://kimaye.com/pages/traceability">TRACEABILITY</a></li><li><a href="https://kimaye.com/pages/beyond-fruits">BEYOND FRUITS</a></li></ul>
+                 <ul class="sub-menu color-scheme-dark"><li><a href="/our-story.html">OUR STORY</a></li><li><a href="https://kimaye.com/pages/why-kimaye" class="current-menu-item">WHY KIMAYE</a></li><li><a href="https://kimaye.com/pages/traceability">TRACEABILITY</a></li><li><a href="https://kimaye.com/pages/beyond-fruits">BEYOND FRUITS</a></li></ul>
               </div>
            </div></li><style type="text/css"></style><li id="menu-item-1599565463159" class="block_type_no_children menu-item menu-item-grow menu-item-1599565463159 menu-item-design-default item-event-hover">
          <a href="https://kimaye.com/blogs/grow-with-kimaye" target="_self">Grow</a>
