--- a/traceability.html
+++ b/traceability.html
@@ -2508,7 +2508,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                      <ul class="sub-menu color-scheme-dark"><li class="menu-item menu-item-design-default item-event-hover"><a href="/our-story.html">Our story</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/why-kimaye.html">Why kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover current_page_item"><a href="/traceability/html">Traceability</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/beyond-fruits.html">Beyond fruits</a></li></ul>
                   </div>
                </div>
-            <span class="icon-sub-menu"></span></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/grow-with-kimaye.html">Grow with kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/contact-us.html">Contact us</a></li></ul></div><div class="header-links">
+            <span class="icon-sub-menu"></span></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/blogs/grow-with-kimaye.html">Grow with kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/contact-us.html">Contact us</a></li></ul></div><div class="header-links">
    <!--<ul><li><a href="https://kimaye.com/account/login">Login / Register</a></li></ul>-->
 </div><style>
   
@@ -2678,7 +2678,7 @@ $('.minus').click(function() {
                  <ul class="sub-menu color-scheme-dark"><li><a href="/our-story.html">OUR STORY</a></li><li><a href="/why-kimaye.html">WHY KIMAYE</a></li><li><a href="/traceability.html" class="current-menu-item">TRACEABILITY</a></li><li><a href="/beyond-fruits.html">BEYOND FRUITS</a></li></ul>
               </div>
            </div></li><style type="text/css"></style><li id="menu-item-1599565463159" class="block_type_no_children menu-item menu-item-grow menu-item-1599565463159 menu-item-design-default item-event-hover">
-         <a href="/grow-with-kimaye.html" target="_self">Grow</a>
+         <a href="/blogs/grow-with-kimaye.html" target="_self">Grow</a>
          <style type="text/css"></style>
       </li></ul>
 
