--- a/why-kimaye.html
+++ b/why-kimaye.html
@@ -2477,8 +2477,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   // reset_success is only true when the reset form is
   </script>
-  <!--<div id="shopify-section-gl_mobile_menu" class="shopify-section mobile-nav"><div class="basel-search-mobile">
-  <form role="search" method="get" id="searchformq" class="searchform basel-ajax-search" action="https://kimaye.com/search">
+  <div id="shopify-section-gl_mobile_menu" class="shopify-section mobile-nav"><div class="basel-search-mobile">
+  <form role="search" method="get" id="searchformq" class="searchform basel-ajax-search" action="/search.html">
     <div>
       <label class="screen-reader-text" for="q"></label>
       <input type="text" placeholder="Search for products" value="" name="q" id="qq" autocomplete="off"><input type="hidden" name="type" value="product"><button type="submit" id="searchsubmitq">Search</button>
@@ -2487,7 +2487,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="basel-search-results">
       <div class="autocomplete-suggestions" style="position: absolute; display: none; max-height: 300px; z-index: 9999;"></div>
     </div>
-  </div></div>-->
+  </div></div>
 <div class="menu-mobile-nav-container">
 
 <!---->
@@ -2505,12 +2505,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                <a href="/why-kimaye.html">Learn</a>
                <div class="sub-menu-dropdown color-scheme-dark">
                   <div class="container">
-                     <ul class="sub-menu color-scheme-dark"><li class="menu-item menu-item-design-default item-event-hover"><a href="/our-story.html">Our story</a></li><li class="menu-item menu-item-design-default item-event-hover current_page_item"><a href="/why-kimaye.html">Why kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/traceability.html">Traceability</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/beyond-fruits.html">Beyond fruits</a></li></ul>
+                     <ul class="sub-menu color-scheme-dark"><li class="menu-item menu-item-design-default item-event-hover current_page_item"><a href="/our-story.html">Our story</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/why-kimaye.html">Why kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/traceability.html">Traceability</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/beyond-fruits.html">Beyond fruits</a></li></ul>
                   </div>
                </div>
             <span class="icon-sub-menu"></span></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/blogs/grow-with-kimaye.html">Grow with kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/contact-us.html">Contact us</a></li></ul></div><div class="header-links">
    <!--<ul><li><a href="https://kimaye.com/account/login">Login / Register</a></li></ul>-->
-</div><style>
+</div>
+<style>
   
   .right-column p{
     display:none;
