--- a/our-story.html
+++ b/our-story.html
@@ -2476,7 +2476,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   //if (window.location.hash == '#recover') { showRecoverPasswordForm() }
 
   // reset_success is only true when the reset form is
-  </script><div id="shopify-section-gl_mobile_menu" class="shopify-section mobile-nav"><div class="basel-search-mobile">
+  </script>
+  <div id="shopify-section-gl_mobile_menu" class="shopify-section mobile-nav"><div class="basel-search-mobile">
   <form role="search" method="get" id="searchformq" class="searchform basel-ajax-search" action="/search.html">
     <div>
       <label class="screen-reader-text" for="q"></label>
