--- a/5-hygiene-tips-to-practice-while-buying-eating-fruits.html
+++ b/5-hygiene-tips-to-practice-while-buying-eating-fruits.html
@@ -2503,12 +2503,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   // reset_success is only true when the reset form is
   </script><div id="shopify-section-gl_mobile_menu" class="shopify-section mobile-nav"><div class="basel-search-mobile">
-  <form role="search" method="get" id="searchformq" class="searchform basel-ajax-search" action="/search.html">
+  <!--<form role="search" method="get" id="searchformq" class="searchform basel-ajax-search" action="/search.html">
     <div>
       <label class="screen-reader-text" for="q"></label>
       <input type="text" placeholder="Search for products" value="" name="q" id="qq" autocomplete="off"><input type="hidden" name="type" value="product"><button type="submit" id="searchsubmitq">Search</button>
     </div>
-  </form><div class="search-results-wrapper">
+  </form>-->
+  <div class="search-results-wrapper">
     <div class="basel-search-results">
       <div class="autocomplete-suggestions" style="position: absolute; display: none; max-height: 300px; z-index: 9999;"></div>
     </div>
@@ -2968,7 +2969,9 @@ ele.style.display = "block";
 
 </div><div class="single-post-navigation"><div class="next-link"><a href="/have-a-fruitful-quarantine-this-summer.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
-         <div id="search-1499690601971" class="sidebar-widget widget_search"><h5 class="widget-title">Search</h5><form role="search" method="get" id="searchform-1499690601971" class="searchform gl_search_post" action="/search.html">
+         <!--<div id="search-1499690601971" class="sidebar-widget widget_search">
+          <h5 class="widget-title">Search</h5>
+          <form role="search" method="get" id="searchform-1499690601971" class="searchform gl_search_post" action="/search.html">
                <div>
                   <input type="hidden" name="type" value="article">
                   <label class="screen-reader-text" for="q"></label>
@@ -2976,7 +2979,8 @@ ele.style.display = "block";
                   <button type="submit" id="searchsubmit">Search</button>
                </div>
             </form>
-         </div><div id="categories-1499701817594" class="sidebar-widget widget_categories"><h5 class="widget-title">Categories</h5><ul><li class="cat-item">Pick a link list to show here in your  under <strong>Blog sidebar</strong> &gt; <strong>Quick links link list</strong>.</li></ul>
+         </div>-->
+         <div id="categories-1499701817594" class="sidebar-widget widget_categories"><h5 class="widget-title">Categories</h5><ul><li class="cat-item">Pick a link list to show here in your  under <strong>Blog sidebar</strong> &gt; <strong>Quick links link list</strong>.</li></ul>
             </div>
 <style>
             .rpwe-block ul{list-style:none!important;margin-left:0!important;padding-left:0!important;}.rpwe-block li{border-bottom:1px solid #eee;margin-bottom:10px;padding-bottom:10px;list-style-type: none;}.rpwe-block a{display:inline!important;text-decoration:none;}.rpwe-block h3{background:none!important;clear:none;margin-bottom:0!important;margin-top:0!important;font-weight:400;font-size:12px!important;line-height:1.5em;}.rpwe-thumb{border:1px solid #EEE!important;box-shadow:none!important;margin:2px 10px 2px 0;padding:3px!important;}.rpwe-summary{font-size:12px;}.rpwe-time{color:#bbb;font-size:11px;}.rpwe-comment{color:#bbb;font-size:11px;padding-left:5px;}.rpwe-alignleft{display:inline;float:left;}.rpwe-alignright{display:inline;float:right;}.rpwe-aligncenter{display:block;margin-left: auto;margin-right: auto;}.rpwe-clearfix:before,.rpwe-clearfix:after{content:"";display:table !important;}.rpwe-clearfix:after{clear:both;}.rpwe-clearfix{zoom:1;}
