--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -2478,12 +2478,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   // reset_success is only true when the reset form is
   </script><div id="shopify-section-gl_mobile_menu" class="shopify-section mobile-nav"><div class="basel-search-mobile">
-  <form role="search" method="get" id="searchformq" class="searchform basel-ajax-search" action="/search..html">
+  <!--<form role="search" method="get" id="searchformq" class="searchform basel-ajax-search" action="/search..html">
     <div>
       <label class="screen-reader-text" for="q"></label>
       <input type="text" placeholder="Search for products" value="" name="q" id="qq" autocomplete="off"><input type="hidden" name="type" value="product"><button type="submit" id="searchsubmitq">Search</button>
     </div>
-  </form><div class="search-results-wrapper">
+  </form>-->
+  <div class="search-results-wrapper">
     <div class="basel-search-results">
       <div class="autocomplete-suggestions" style="position: absolute; display: none; max-height: 300px; z-index: 9999;"></div>
     </div>
@@ -2508,7 +2509,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                      <ul class="sub-menu color-scheme-dark"><li class="menu-item menu-item-design-default item-event-hover"><a href="/our-story.html">Our story</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/why-kimaye.html">Why kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/traceability.html">Traceability</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/beyond-fruits.html">Beyond fruits</a></li></ul>
                   </div>
                </div>
-            <span class="icon-sub-menu"></span></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/blogs/grow-with-kimaye.html">Grow with kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/contact-us.html">Contact us</a></li></ul></div><div class="header-links">
+            <span class="icon-sub-menu"></span></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/grow-with-kimaye.html">Grow with kimaye</a></li><li class="menu-item menu-item-design-default item-event-hover"><a href="/contact-us.html">Contact us</a></li></ul></div><div class="header-links">
    <!--<ul><li><a href="https://kimaye.com/account/login">Login / Register</a></li></ul>-->
 </div><style>
   
@@ -2678,7 +2679,7 @@ $('.minus').click(function() {
                  <ul class="sub-menu color-scheme-dark"><li><a href="/our-story.html">OUR STORY</a></li><li><a href="/why-kimaye.html">WHY KIMAYE</a></li><li><a href="/traceability.html">TRACEABILITY</a></li><li><a href="/beyond-fruits.html">BEYOND FRUITS</a></li></ul>
               </div>
            </div></li><style type="text/css"></style><li id="menu-item-1599565463159" class="block_type_no_children menu-item menu-item-grow menu-item-1599565463159 menu-item-design-default item-event-hover">
-         <a href="/blogs/grow-with-kimaye.html" target="_self">Grow</a>
+         <a href="/grow-with-kimaye.html" target="_self">Grow</a>
          <style type="text/css"></style>
       </li></ul>
 
