--- a/craving-for-something-delicious-during-the-lockdown-we-got-you.html
+++ b/craving-for-something-delicious-during-the-lockdown-we-got-you.html
@@ -1,6 +1,10 @@
 
 <!-- saved from url=(0104)https://kimaye.com/blogs/grow-with-kimaye/craving-for-something-delicious-during-the-lockdown-we-got-you -->
 <html class="yes-js js_active js" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
+   @font-face {
+   font-family: Bitterbrush;
+   src: url(Bitterbrush.otf);
+}
   .main-header{
     display: flex;
   }
@@ -522,7 +526,10 @@
     <meta name="keywords" content="Kimaye">
     <meta name="author" content="kimaye.com">
     <meta name="format-detection" content="telephone=no">
-    
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;600&display=swap" rel="stylesheet">
 <!--     BANNER 1 -->
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner.jpg?v=1669188865">
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner-mobile_900x.jpg?v=1669188872">
@@ -2761,7 +2768,7 @@ $('.minus').click(function() {
       </li></ul>
 
 </div></div>
-      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="#" class="basel-logo basel-main-logo" rel="home" itemprop="url">
+      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="/" class="basel-logo basel-main-logo" rel="home" itemprop="url">
         <img data-swift-lazy="1" loading="lazy" class="regular-logo" src="./Craving for Something Delicious During the Lockdown_ We Got You! – Kimaye_files/website-logo_400x@2x.png" alt="Kimaye" itemprop="logo"></a></div></div><div class="right-column">   
         
 <!--         <div class="location">
@@ -3043,7 +3050,7 @@ What you'll need: <br>
 <p>1. Crush the oats so that they turn into a powder; the texture shouldn’t necessarily be fine.<br> 2. Mash the bananas, add the blueberries, and combine them together.<br> 3. Put the mixture into a non-stick pan in the shape of cookies and bake for 15-20 minutes until golden, at 180° C.</p>
 <p>It’s not easy making fruits a part of your diet especially during this time. We understand that. You don’t necessarily need to munch on them separately either. There are plenty of recipes available that will satiate your love for sweets in a healthy way. Dark chocolate has flavanols and antioxidants that help to reduce toxin buildup in your body. Combine dark chocolate with your nutrient-rich fruits and you’ll be signing up for goodness that’s yummy. One last thing: make sure that you choose your fruits wisely as there is a possibility of them being treated with pesticides that can affect their quality. Good fruits mean a healthier, happier you.</p>  </div><!-- .entry-content -->
             </article><!-- #post --><div class="single-post-social"><ul class="social-icons text-center social-share icons-design-colored icons-size-default">
-     <li class="social-email"><a href="mailto:?subject=Check%20this%20/craving-for-something-delicious-during-the-lockdown-we-got-you.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i class="fa fa-envelope"></i>Email</a></li></ul>
+     <li class="social-email"><a href="mailto:?subject=Check%20this%20/craving-for-something-delicious-during-the-lockdown-we-got-you.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i >&#9993;</i>Email</a></li></ul>
 
 </div><div class="single-post-navigation"><div class="prev-link"><a href="/a-fruitful-monsoon-diet.html" rel="prev">Previous Post</a></div><div class="next-link"><a href="/healthy-at-heart.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
