--- a/have-a-fruitful-quarantine-this-summer.html
+++ b/have-a-fruitful-quarantine-this-summer.html
@@ -1,6 +1,10 @@
 
 <!-- saved from url=(0080)https://kimaye.com/blogs/grow-with-kimaye/have-a-fruitful-quarantine-this-summer -->
 <html class="yes-js js_active js" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
+   @font-face {
+   font-family: Bitterbrush;
+   src: url(Bitterbrush.otf);
+}
   .main-header{
     display: flex;
   }
@@ -523,6 +527,9 @@
     <meta name="author" content="kimaye.com">
     <meta name="format-detection" content="telephone=no">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;600&display=swap" rel="stylesheet">
 <!--     BANNER 1 -->
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner.jpg?v=1669188865">
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner-mobile_900x.jpg?v=1669188872">
@@ -2691,7 +2698,7 @@ $('.minus').click(function() {
       </li></ul>
 
 </div></div>
-      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="#" class="basel-logo basel-main-logo" rel="home" itemprop="url">
+      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="" class="basel-logo basel-main-logo" rel="home" itemprop="url">
         <img data-swift-lazy="1" loading="lazy" class="regular-logo" src="./Have a fruitful Quarantine this summer – Kimaye_files/website-logo_400x@2x.png" alt="Kimaye" itemprop="logo"></a></div></div><div class="right-column">   
         
 <!--         <div class="location">
@@ -2938,7 +2945,7 @@ ele.style.display = "block";
 <p>Toast it, or just toss the bread over a pan if you like it crunchy. This combination of melted chocolate with banana is tempting, but you can also try this with&nbsp;some homemade peanut butter to suit your taste buds.<br><br><strong>Smoothies and Shakes</strong><br>Banana and chikoo make for deliciously thick&nbsp;smoothies! Try it&nbsp;with added milk, yogurt and&nbsp;seeds and for healthier options opt for soy or almond milk.</p>
 <p>You can also experiment and combine the two for a twist in the flavor. Sprinkle some arils or chia seeds on top to make it a perfect instagram-worthy delight!<br><br><strong>Customise your custard</strong><br>Fruit&nbsp;makes up the most appetizing dessert, and you can always count on it for&nbsp;custard or trifle. Layer some pound cake,&nbsp;custard, fruit&nbsp;and any toppings you fancy.<br><br><strong>Mix it up in a salad</strong><br>Nothing beats a fruit salad. Strike a balance in your diet by replacing a meal with&nbsp;a bowl of fruit salad.&nbsp;There’s a lot you can do with fruit, right from healthy snacking options to mouth watering dessert.</p>  </div><!-- .entry-content -->
             </article><!-- #post --><div class="single-post-social"><ul class="social-icons text-center social-share icons-design-colored icons-size-default">
-     <li class="social-email"><a href="mailto:?subject=Check%20this%20/have-a-fruitful-quarantine-this-summer.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i class="fa fa-envelope"></i>Email</a></li></ul>
+     <li class="social-email"><a href="mailto:?subject=Check%20this%20/have-a-fruitful-quarantine-this-summer.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i>&#9993;</i>Email</a></li></ul>
 
 </div><div class="single-post-navigation"><div class="prev-link"><a href="/5-hygiene-tips-to-practice-while-buying-eating-fruits.html" rel="prev">Previous Post</a></div><div class="next-link"><a href="/meet-your-health-goals-during-the-lockdown.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
