--- a/5-hygiene-tips-to-practice-while-buying-eating-fruits.html
+++ b/5-hygiene-tips-to-practice-while-buying-eating-fruits.html
@@ -1,6 +1,10 @@
 
 <!-- saved from url=(0095)https://kimaye.com/blogs/grow-with-kimaye/5-hygiene-tips-to-practice-while-buying-eating-fruits -->
 <html class="yes-js js_active js" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
+   @font-face {
+   font-family: Bitterbrush;
+   src: url(Bitterbrush.otf);
+}
   .main-header{
     display: flex;
   }
@@ -522,7 +526,10 @@
     <meta name="keywords" content="Kimaye">
     <meta name="author" content="kimaye.com">
     <meta name="format-detection" content="telephone=no">
-    
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;600&display=swap" rel="stylesheet">
 <!--     BANNER 1 -->
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner.jpg?v=1669188865">
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner-mobile_900x.jpg?v=1669188872">
@@ -2709,7 +2716,7 @@ $('.minus').click(function() {
       </li></ul>
 
 </div></div>
-      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="#" class="basel-logo basel-main-logo" rel="home" itemprop="url">
+      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="/" class="basel-logo basel-main-logo" rel="home" itemprop="url">
         <img data-swift-lazy="1" loading="lazy" class="regular-logo" src="./5- Hygiene tips to practice while buying &amp; eating fruits – Kimaye_files/website-logo_400x@2x.png" alt="Kimaye" itemprop="logo"></a></div></div><div class="right-column">   
         
 <!--         <div class="location">
@@ -2965,9 +2972,9 @@ ele.style.display = "block";
 <strong>Eat it fresh<span>&nbsp;</span></strong>- Consume your fruits while they're fresh! One of the ways in which you can fight the virus is through strong immunity. So include fruits in your diet at regular intervals which rank high on boosting immunity.</li>
 </ul>  </div><!-- .entry-content -->
             </article><!-- #post --><div class="single-post-social"><ul class="social-icons text-center social-share icons-design-colored icons-size-default">
-     <li class="social-email"><a href="mailto:?subject=Check%20this%20/5-hygiene-tips-to-practice-while-buying-eating-fruits.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i class="fa fa-envelope"></i>Email</a></li></ul>
+     <li class="social-email"><a href="mailto:?subject=Check%20this%20/5-hygiene-tips-to-practice-while-buying-eating-fruits.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i >&#9993;</i>Email</a></li></ul>
 
-</div><div class="single-post-navigation"><div class="next-link"><a href="/have-a-fruitful-quarantine-this-summer.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
+</div><div class="single-post-navigation"><div class="next-link"><a href="/have-a-fruitful-quarantine-this-summer.html" rel="next">Next Post</a>&</div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
          <!--<div id="search-1499690601971" class="sidebar-widget widget_search">
           <h5 class="widget-title">Search</h5>
