--- a/healthy-at-heart.html
+++ b/healthy-at-heart.html
@@ -1,6 +1,10 @@
 
 <!-- saved from url=(0058)https://kimaye.com/blogs/grow-with-kimaye/healthy-at-heart -->
 <html class="yes-js js_active js" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
+   @font-face {
+   font-family: Bitterbrush;
+   src: url(Bitterbrush.otf);
+}
   .main-header{
     display: flex;
   }
@@ -523,6 +527,9 @@
     <meta name="author" content="kimaye.com">
     <meta name="format-detection" content="telephone=no">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;600&display=swap" rel="stylesheet">
 <!--     BANNER 1 -->
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner.jpg?v=1669188865">
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner-mobile_900x.jpg?v=1669188872">
@@ -2703,7 +2710,7 @@ $('.minus').click(function() {
       </li></ul>
 
 </div></div>
-      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="#" class="basel-logo basel-main-logo" rel="home" itemprop="url">
+      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="/" class="basel-logo basel-main-logo" rel="home" itemprop="url">
         <img data-swift-lazy="1" loading="lazy" class="regular-logo" src="./Healthy at Heart – Kimaye_files/website-logo_400x@2x.png" alt="Kimaye" itemprop="logo"></a></div></div><div class="right-column">   
         
 <!--         <div class="location">
@@ -2956,7 +2963,7 @@ ele.style.display = "block";
 <p><span><strong>Shut down your brain&nbsp;</strong>- Meditation and Yoga are popularly known to keep a check on your stress levels. Take out 10 minutes from your daily routine to meditate and unwind from all your thoughts.</span></p>
 <p><span>While medications might help nip the bud, a healthy lifestyle can go a long way in preventing heartwarming trends like high blood pressure, resulting in poor heart health over a period of time. So this World heart day, let’s pledge to not just follow our heart but take care of it too.</span></p>  </div><!-- .entry-content -->
             </article><!-- #post --><div class="single-post-social"><ul class="social-icons text-center social-share icons-design-colored icons-size-default">
-     <li class="social-email"><a href="mailto:?subject=Check%20this%20/healthy-at-heart.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i class="fa fa-envelope"></i>Email</a></li></ul>
+     <li class="social-email"><a href="mailto:?subject=Check%20this%20/healthy-at-heart.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i >&#9993;</i>Email</a></li></ul>
 
 </div><div class="single-post-navigation"><div class="prev-link"><a href="/craving-for-something-delicious-during-the-lockdown-we-got-you.html" rel="prev">Previous Post</a></div><div class="next-link"><a href="/nourish-yourself-with-these-fruitful-nutrients.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
