--- a/meet-your-health-goals-during-the-lockdown.html
+++ b/meet-your-health-goals-during-the-lockdown.html
@@ -1,6 +1,10 @@
 
 <!-- saved from url=(0084)https://kimaye.com/blogs/grow-with-kimaye/meet-your-health-goals-during-the-lockdown -->
 <html class="yes-js js_active js" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
+   @font-face {
+   font-family: Bitterbrush;
+   src: url(Bitterbrush.otf);
+}
   .main-header{
     display: flex;
   }
@@ -522,7 +526,10 @@
     <meta name="keywords" content="Kimaye">
     <meta name="author" content="kimaye.com">
     <meta name="format-detection" content="telephone=no">
-    
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;600&display=swap" rel="stylesheet">
 <!--     BANNER 1 -->
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner.jpg?v=1669188865">
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner-mobile_900x.jpg?v=1669188872">
@@ -2683,7 +2690,7 @@ $('.minus').click(function() {
       </li></ul>
 
 </div></div>
-      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="#" class="basel-logo basel-main-logo" rel="home" itemprop="url">
+      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="/" class="basel-logo basel-main-logo" rel="home" itemprop="url">
         <img data-swift-lazy="1" loading="lazy" class="regular-logo" src="./Meet your health goals during the lockdown – Kimaye_files/website-logo_400x@2x.png" alt="Kimaye" itemprop="logo"></a></div></div><div class="right-column">   
         
 <!--         <div class="location">
@@ -2941,7 +2948,7 @@ ele.style.display = "block";
 <p><img src="./Meet your health goals during the lockdown – Kimaye_files/netflix_1.jpg" alt=""></p>
 <p><span>The WFH culture may have turned us a little lazy but we can capitalize on this time instead to be more&nbsp;productive post quarantine. They say it takes 21 days to build a habit and 90 to make it a lifestyle. The lockdown may seem uncertain but we sure can emerge as winners and make the most of this time. So stay healthy, positive and&nbsp;at home!</span></p>  </div><!-- .entry-content -->
             </article><!-- #post --><div class="single-post-social"><ul class="social-icons text-center social-share icons-design-colored icons-size-default">
-     <li class="social-email"><a href="mailto:?subject=Check%20this%20/meet-your-health-goals-during-the-lockdown.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i class="fa fa-envelope"></i>Email</a></li></ul>
+     <li class="social-email"><a href="mailto:?subject=Check%20this%20/meet-your-health-goals-during-the-lockdown.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i>&#9993;</i>Email</a></li></ul>
 
 </div><div class="single-post-navigation"><div class="prev-link"><a href="/have-a-fruitful-quarantine-this-summer.html" rel="prev">Previous Post</a></div><div class="next-link"><a href="/do-fruits-have-a-time-table.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
