--- a/nourish-yourself-with-these-fruitful-nutrients.html
+++ b/nourish-yourself-with-these-fruitful-nutrients.html
@@ -1,6 +1,10 @@
 
 <!-- saved from url=(0088)https://kimaye.com/blogs/grow-with-kimaye/nourish-yourself-with-these-fruitful-nutrients -->
 <html class="yes-js js_active js" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
+   @font-face {
+   font-family: Bitterbrush;
+   src: url(Bitterbrush.otf);
+}
   .main-header{
     display: flex;
   }
@@ -522,7 +526,10 @@
     <meta name="keywords" content="Kimaye">
     <meta name="author" content="kimaye.com">
     <meta name="format-detection" content="telephone=no">
-    
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;600&display=swap" rel="stylesheet">
 <!--     BANNER 1 -->
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner.jpg?v=1669188865">
     <link rel="preload" as="image" href="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/Chelean-cherry-banner-mobile_900x.jpg?v=1669188872">
@@ -2703,7 +2710,7 @@ $('.minus').click(function() {
       </li></ul>
 
 </div></div>
-      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="#" class="basel-logo basel-main-logo" rel="home" itemprop="url">
+      <!--END MAIN-NAV--><div class="site-logo"><div class="basel-logo-wrap" itemscope="" itemtype="http://schema.org/Organization"><a href="/" class="basel-logo basel-main-logo" rel="home" itemprop="url">
         <img data-swift-lazy="1" loading="lazy" class="regular-logo" src="./Nourish yourself with these &#39;fruitful&#39; nutrients – Kimaye_files/website-logo_400x@2x.png" alt="Kimaye" itemprop="logo"></a></div></div><div class="right-column">   
         
 <!--         <div class="location">
@@ -2956,7 +2963,7 @@ ele.style.display = "block";
 <p><span><strong>Strawberries&nbsp;</strong>– What’s good for you but also good to taste?&nbsp; Yes, the Strawberries- beautiful red fruits with seeds on the outside grace the planet with their taste &amp; beauty. Strawberries are rich in Iron &amp; Vitamin C (helps in the absorption of Iron). We do love the berries, berry much!</span></p>
 <p><span>While all kinds of vegetables and fruits are equally essential for nutrients, you can start with these for their sweet-snacky nature. It’s time to give up on all that junk food and turn to a nutritious, yet tasty diet.&nbsp; The only way to achieve a healthy body and mind is to tread the path of good nutrition. So make the most of this Nutrition month by carving your food habits into a fruitful-nutritious lifestyle!</span></p>  </div><!-- .entry-content -->
             </article><!-- #post --><div class="single-post-social"><ul class="social-icons text-center social-share icons-design-colored icons-size-default">
-     <li class="social-email"><a href="mailto:?subject=Check%20this%20/nourish-yourself-with-these-fruitful-nutrients.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i class="fa fa-envelope"></i>Email</a></li></ul>
+     <li class="social-email"><a href="mailto:?subject=Check%20this%20/nourish-yourself-with-these-fruitful-nutrients.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i>&#9993;</i>Email</a></li></ul>
 
 </div><div class="single-post-navigation"><div class="prev-link"><a href="/healthy-at-heart.html" rel="prev">Previous Post</a></div><div class="next-link"><a href="/make-immunity-your-best-friend.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
