--- a/5-hygiene-tips-to-practice-while-buying-eating-fruits.html
+++ b/5-hygiene-tips-to-practice-while-buying-eating-fruits.html
@@ -2974,7 +2974,7 @@ ele.style.display = "block";
             </article><!-- #post --><div class="single-post-social"><ul class="social-icons text-center social-share icons-design-colored icons-size-default">
      <li class="social-email"><a href="mailto:?subject=Check%20this%20/5-hygiene-tips-to-practice-while-buying-eating-fruits.html" target="_blank" class="basel-tooltip"><span class="basel-tooltip-label">Email</span><i >&#9993;</i>Email</a></li></ul>
 
-</div><div class="single-post-navigation"><div class="next-link"><a href="/have-a-fruitful-quarantine-this-summer.html" rel="next">Next Post</a>&</div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
+</div><div class="single-post-navigation"><div class="next-link"><a href="/have-a-fruitful-quarantine-this-summer.html" rel="next">Next Post</a></div></div></div><!-- .site-content --><aside class="sidebar-container col-sm-3 sidebar-right" role="complementary">
            <div class="sidebar-inner"><div id="shopify-section-gl_section_sidebar_blog" class="shopify-section widget-area">
          <!--<div id="search-1499690601971" class="sidebar-widget widget_search">
           <h5 class="widget-title">Search</h5>
