--- a/index.html
+++ b/index.html
@@ -6399,68 +6399,8 @@ ele.style.display = "block";
             <h2 class="section_title">Four Steps to Perfection</h2>
             <div class="container">
               <div class="owl-carousel owl-loaded owl-drag">
-                <div class="owl-stage-outer">
-                  <div
-                    class="owl-stage"
-                    style="
-                      transform: translate3d(-2010px, 0px, 0px);
-                      transition: all 2s ease 0s;
-                      width: 5360px;
-                    "
-                  >
-                    <div
-                      class="owl-item cloned"
-                      style="width: 470px; margin-right: 200px"
-                    >
-                      <div class="step step3">
-                        <div class="step_image">
-                          <img
-                            data-swift-lazy="1"
-                            loading="lazy"
-                            src="./Order Fresh Fruits Online _ Buy Fruits Mumbai- Kimaye_files/step3.png"
-                            class="img-responsive"
-                          />
-                        </div>
-                        <div class="step_content">
-                          <h5 class="step_title">Earning the Kimaye badge</h5>
-                          <p class="step_para">
-                            Quality checks at our automated state-of-art
-                            packhouse ensure only the best fruits earn the
-                            Kimaye badge. All our fruits are sorted and graded
-                            in these facilities which are FSSC 22000, HACCP, BRC
-                            certified. These certifications are a testimony that
-                            we follow world-class practices at our unit.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      class="owl-item cloned"
-                      style="width: 470px; margin-right: 200px"
-                    >
-                      <div class="step step4">
-                        <div class="step_image">
-                          <img
-                            data-swift-lazy="1"
-                            loading="lazy"
-                            src="./Order Fresh Fruits Online _ Buy Fruits Mumbai- Kimaye_files/step4.png"
-                            class="img-responsive"
-                          />
-                        </div>
-                        <div class="step_content">
-                          <h5 class="step_title">Zero-touch processes</h5>
-                          <p class="step_para">
-                            Our fruits are packaged with care so that they
-                            remain fresh and safe during the transit. We follow
-                            a contamination-free supply chain to deliver
-                            delightful, yummy, and safe fruits.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
                     <div
                       class="owl-item"
-                      style="width: 470px; margin-right: 200px"
                     >
                       <div class="step">
                         <div class="step_image">
@@ -6485,8 +6425,7 @@ ele.style.display = "block";
                       </div>
                     </div>
                     <div
-                      class="owl-item active"
-                      style="width: 470px; margin-right: 200px"
+                      class="owl-item"
                     >
                       <div class="step step2">
                         <div class="step_image">
@@ -6510,8 +6449,7 @@ ele.style.display = "block";
                       </div>
                     </div>
                     <div
-                      class="owl-item active"
-                      style="width: 470px; margin-right: 200px"
+                      class="owl-item"
                     >
                       <div class="step step3">
                         <div class="step_image">
@@ -6537,7 +6475,6 @@ ele.style.display = "block";
                     </div>
                     <div
                       class="owl-item"
-                      style="width: 470px; margin-right: 200px"
                     >
                       <div class="step step4">
                         <div class="step_image">
@@ -6559,67 +6496,6 @@ ele.style.display = "block";
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="owl-item cloned"
-                      style="width: 470px; margin-right: 200px"
-                    >
-                      <div class="step">
-                        <div class="step_image">
-                          <img
-                            data-swift-lazy="1"
-                            loading="lazy"
-                            src="./Order Fresh Fruits Online _ Buy Fruits Mumbai- Kimaye_files/step1.png"
-                            class="img-responsive"
-                          />
-                        </div>
-                        <div class="step_content">
-                          <h5 class="step_title">Grown responsibly</h5>
-                          <p class="step_para">
-                            We follow Global Good Agricultural Practices (G.A.P)
-                            and train our farmers to undertake activities that
-                            ensure the growth of healthy fruits. We test
-                            multiple lots in accredited labs for over 180
-                            chemicals. This ensures that our fruits are 100%
-                            safe to consume.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      class="owl-item cloned"
-                      style="width: 470px; margin-right: 200px"
-                    >
-                      <div class="step step2">
-                        <div class="step_image">
-                          <img
-                            data-swift-lazy="1"
-                            loading="lazy"
-                            src="./Order Fresh Fruits Online _ Buy Fruits Mumbai- Kimaye_files/step2.png"
-                            class="img-responsive"
-                          />
-                        </div>
-                        <div class="step_content">
-                          <h5 class="step_title">Handpicked at farms</h5>
-                          <p class="step_para">
-                            Our trained Harvesting teams ensure only the best
-                            fruits are picked from the tree. Our fruits have no
-                            need to travel to the mandis! The fruit selection is
-                            done at the farm itself to deliver consistent
-                            freshness and taste.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="owl-nav disabled">
-                  <div class="owl-prev">prev</div>
-                  <div class="owl-next">next</div>
-                </div>
-                <div class="owl-dots">
-                  <div class="owl-dot active"><span></span></div>
-                  <div class="owl-dot"><span></span></div>
-                </div>
               </div>
             </div>
           </section>
